<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".ui.write.expenses.ExpensesFragment">

    <TextView
        style="@style/TextContent.Write.Title"
        android:id="@+id/tvExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/expenses2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextContent.Write.Label"
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name2"
        app:layout_constraintStart_toStartOf="@+id/tvExpenses"
        app:layout_constraintTop_toBottomOf="@+id/tvExpenses" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvNameLabel">

        <com.rpl.fintrack.ui.customview.NameEditText
            style="@style/TextContent.Write.Input"
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:hint="@string/transaction_name"
            android:inputType="text"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextContent.Write.Remainder"
        android:id="@+id/tvNameCharLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_30_characters_left"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

    <TextView
        style="@style/TextContent.Write.Label"
        android:id="@+id/tvDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date2"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/tvNameCharLeft" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="280dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconTint="@color/black"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@+id/tvDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvDateLabel">

        <EditText
            style="@style/TextContent.Write.Input"
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="none"
            android:hint="@string/select_date"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextContent.Write.Label"
        android:id="@+id/tvCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="@+id/dateInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/dateInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:endIconTint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tvCategoryLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoryLabel">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            style="@style/TextContent.Write.Input"
            android:id="@+id/dropdownCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input"
            android:hint="@string/choose_category"
            android:inputType="none"
            app:simpleItems="@array/expenses_category" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextContent.Write.Label"
        android:id="@+id/tvAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/amount2"
        app:layout_constraintStart_toStartOf="@+id/categoryInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/categoryInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@+id/tvAmountLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvAmountLabel">

        <EditText
            style="@style/TextContent.Write.Input"
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input"
            android:gravity="center_vertical"
            android:hint="@string/transaction_amount"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextContent.Write.Label"
        android:id="@+id/tvDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description2"
        app:layout_constraintStart_toStartOf="@+id/categoryInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/amountEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvDescriptionLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel">

        <com.rpl.fintrack.ui.customview.DescriptionEditText
            style="@style/TextContent.Write.Input"
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input"
            android:gravity="top|start"
            android:padding="16dp"
            android:hint="@string/transaction_description"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:scrollbars="vertical"
            android:maxLines="10"
            android:overScrollMode="ifContentScrolls"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/TextContent.Write.Remainder"
        android:id="@+id/tvDescriptionCharLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_30_characters_left"
        app:layout_constraintStart_toStartOf="@+id/descriptionEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout" />

    <Button
        android:id="@+id/btnWriteExpenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_logout"
        android:text="@string/write_transaction"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/descriptionEditTextLayout"
        app:layout_constraintStart_toStartOf="@+id/descriptionEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionCharLeft" />

    <ProgressBar
        android:id="@+id/pgWriteExpenses"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

</androidx.constraintlayout.widget.ConstraintLayout>